# jag-3d

./: .hgignore  CMakeLists.txt  Downloads.md  License.md  ProjectHome.md
src/: CMakeLists.txt
src/DB/DBLib/: Image.cpp  ImageLoader.cpp  PluginLoader.cpp  SceneLoader.cpp
src/Draw/: BufferObject.cpp
src/Text2/: CMakeLists.txt  DefaultFont.cpp  PixelBuffer.cpp  Text2D.cpp
src/Text2/Linux64.Opt/: Makedepend
src/apps/: CMakeLists.txt
src/apps/jaginfo/: CMakeLists.txt  jaginfo.cpp
src/demoSupport/: DemoInterface.h  freeglutSupport.cpp  platformFreeglut.h  qtGlWidget.h  qtSupport.cpp  vrjSupport.cpp
src/examples/: CMakeLists.txt
src/examples/abuffer/: ABufferGL4.cpp  ABufferGL4Parameters.h  ABufferGL4_Basic.cpp  ABufferGL4_Basic.h  ABufferGL4_LinkedList.cpp  ABufferGL4_LinkedList.h  CMakeLists.txt  InfoWidget.h  Matrix.h  ShadersManagment.cpp  ShadersManagment.h  Vector.h  readme.txt
src/examples/abufferJag/: CMakeLists.txt  abufferJag.cpp  readme.txt
src/examples/jagmodel/: CMakeLists.txt  jagmodel.cpp
src/examples/rtt/: CMakeLists.txt  rtt.cpp
src/gl3w/: CMakeLists.txt  gl3w.c  gl3w.h  gl3w_gen.py  gl3w_gen.py.in
src/jag/: CMakeLists.txt
src/jag/base/: Buffer.h  CMakeLists.txt  Config.h.in  Export.h  Log.cpp  Log.h  LogBase.h  LogMacros.h  MultiCallback.h  Notifier.h  Profile.cpp  Profile.h  Transform.h  UserDataOwner.cpp  UserDataOwner.h  Version.cpp  Version.h.in  gmtlSupport.h  ptr.h  types.h
src/jag/disk/: CMakeLists.txt  Export.h  Options.cpp  Options.h  PluginManager.cpp  PluginManager.h  ReadWrite.cpp  ReadWrite.h  ReaderWriter.cpp  ReaderWriter.h
src/jag/draw/: Bound.h  BoundOwner.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Command.h  CommandMap.h  CommandMapPtr.h  CommandNode.cpp  CommandNode.h  CommandNodePtr.h  Common.h  ContextSupport.cpp  ContextSupport.h  ContextSupportGl3w.cpp  ContextSupportGl3w.h  DrawCommand.h  DrawGraph.cpp  DrawGraph.h  DrawInfo.cpp  DrawInfo.h  DrawNode.cpp  DrawNode.h  DrawNodeContainer.cpp  DrawNodeContainer.h  Drawable.cpp  Drawable.h  Error.cpp  Error.h  Export.h  Framebuffer.cpp  Framebuffer.h  FramebufferAttachable.h  Image.cpp  Image.h  ObjectID.h  PerContextData.h  PixelStore.cpp  PixelStore.h  PlatformOpenGL.h  (+25 more)
src/jag/mx/: CMakeLists.txt  Export.h  MxCore.cpp  MxCore.h  MxGamePad.cpp  MxGamePad.h  MxGamePadDX.cpp  MxGamePadDX.h  MxUtils.cpp  MxUtils.h
src/jag/sg/: CMakeLists.txt  CollectionVisitor.cpp  CollectionVisitor.h  Common.h  ExecuteVisitor.cpp  ExecuteVisitor.h  Export.h  FrustumCullCallback.cpp  FrustumCullCallback.h  IntersectVisitor.cpp  IntersectVisitor.h  Node.cpp  Node.h  NodeMaskCullCallback.cpp  NodeMaskCullCallback.h  SelectContainerCallback.cpp  SelectContainerCallback.h  SmallFeatureCallback.cpp  SmallFeatureCallback.h  Visitor.h
src/jag/util/: ABuffer.cpp  ABuffer.h  Blur.cpp  Blur.h  BufferAggregationVisitor.cpp  BufferAggregationVisitor.h  CMakeLists.txt  DrawGraphCountVisitor.h  Export.h  QuadNode.cpp  QuadNode.h  ResetBoundsVisitor.cpp  ResetBoundsVisitor.h  Shapes.cpp  Shapes.h
src/jagBase/: Buffer.h  CMakeLists.txt  Config.h.in  Export.h  GLEW.cpp  Log.cpp  Log.h  LogBase.h  LogEnable.h.in  LogMacros.h  MultiCallback.h  Notifier.h  Profile.cpp  Profile.h  Transform.h  UserDataOwner.cpp  UserDataOwner.h  Version.cpp  Version.h.in  gmtlSupport.h  ptr.h  types.h
src/jagDisk/: CMakeLists.txt  Export.h  Options.cpp  Options.h  PluginManager.cpp  PluginManager.h  ReadWrite.cpp  ReadWrite.h  ReaderWriter.cpp  ReaderWriter.h
src/jagDraw/: Bound.h  BoundOwner.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Command.h  CommandMap.h  CommandNode.cpp  CommandNode.h  CommandNodePtr.h  Common.h  ContextSupport.cpp  ContextSupport.h  ContextSupportGLEW.cpp  ContextSupportGl3w.cpp  ContextSupportGl3w.h  DrawCommand.h  DrawCommon.h  DrawGraph.cpp  DrawGraph.h  DrawInfo.cpp  DrawInfo.h  DrawNode.cpp  DrawNode.h  DrawNodeContainer.cpp  DrawNodeContainer.h  Drawable.cpp  Drawable.h  DrawableAttribute.h  DrawablePrep.h  DrawingGroup.cpp  DrawingGroup.h  Error.cpp  Error.h  Export.h  Framebuffer.cpp  Framebuffer.h  FramebufferAttachable.h  GLEW.cpp  Image.cpp  (+43 more)
src/jagDraw/GL/: gl3w.h
src/jagDraw/GL3/: gl3w.h
src/jagMx/: CMakeLists.txt  Export.h  MxCore.cpp  MxCore.h  MxGamePad.cpp  MxGamePad.h  MxGamePadDX.cpp  MxGamePadDX.h  MxUtils.cpp  MxUtils.h
src/jagSG/: CMakeLists.txt  CollectionVisitor.cpp  CollectionVisitor.h  Common.h  ExecuteVisitor.cpp  ExecuteVisitor.h  Export.h  FrustumCullCallback.cpp  FrustumCullCallback.h  IntersectVisitor.cpp  IntersectVisitor.h  Node.cpp  Node.h  NodeMaskCullCallback.cpp  NodeMaskCullCallback.h  SelectContainerCallback.cpp  SelectContainerCallback.h  SmallFeatureCallback.cpp  SmallFeatureCallback.h  Visitor.h
src/jagUtil/: ABuffer.cpp  ABuffer.h  Blur.cpp  Blur.h  BufferAggregationVisitor.cpp  BufferAggregationVisitor.h  CMakeLists.txt  DrawGraphCountVisitor.h  Export.h  QuadNode.cpp  QuadNode.h  ResetBoundsVisitor.cpp  ResetBoundsVisitor.h  Shapes.cpp  Shapes.h
src/plugins/: CMakeLists.txt
src/plugins/assimpModel/: CMakeLists.txt  assimp2jag.cpp  assimp2jag.h  assimpModel.cpp  jagp-assimpModel.jagpi
src/plugins/common/: jagp-pluginInfo.jagpi.in  pluginSupport.h.in
src/plugins/image/: CMakeLists.txt  image.cpp
src/plugins/image-osg/: CMakeLists.txt  image-osg.cpp  jagp-image-osg.jagpi
src/plugins/model-osg/: CMakeLists.txt  jagp-model-osg.jagpi  model-osg.cpp  osg2jag.cpp  osg2jag.h
src/plugins/osg/: osgSupport.h.in
src/plugins/osgImage/: CMakeLists.txt  jagp-image-osg.jagpi  jagp-osgImage.jagpi  osgImage.cpp
src/plugins/osgModel/: CMakeLists.txt  jagp-osgModel.jagpi  osg2jag.cpp  osg2jag.h  osgModel.cpp
src/plugins/shader/: CMakeLists.txt  jagp-shader.jagpi  shader.cpp  shader.jagpi
src/plugins/text/: CMakeLists.txt  TextDumpDG.cpp  TextDumpDG.h  TextDumpSG.cpp  TextDumpSG.h  jagp-text.jagpi  text.cpp
src/tests/: CMakeLists.txt
src/tests/benchmark/: CMakeLists.txt  benchmark.cpp
src/tests/draw/: CMakeLists.txt  draw.cpp
src/tests/drawable/: CMakeLists.txt  drawable.cpp
src/unittests/: CMakeLists.txt
(+243 files in other folders)
