# Tests for jagDraw interface
add_subdirectory( drawable )
add_subdirectory( fbtest )
add_subdirectory( texture )
# Deprecated. See jagload/readme.txt.
# add_subdirectory( jagload )


# Tests for jagSG interface
add_subdirectory( nodes )
add_subdirectory( transparency )


# Performance tests
add_subdirectory( benchmark )
